sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:4: error: '=' expected but ';' found.
	var i
^AlgSelectionSort:5: error: '=' expected but ';' found.
	for(i<-0 to getNombreValeurs()-1)
^